Working on removing direct references to CombatState, I found that any direct reference to the class throws exceptions because some of the obfuscation causes the class names to become java keywords, therefore making direct or indirect references impossible - everything must be done in Kotlin or reflection